# Multimodal_quiz

./: .gitignore  README.md
quiz-dev-runner/: dev.mjs  package-lock.json  package.json
quiz-video-backend/: pyproject.toml  requirements.txt
quiz-video-backend/app/: main.py  pipeline_runner.py
quiz-video-backend/app/api/: routes_jobs.py  routes_quiz.py  routes_upload.py
quiz-video-backend/app/core/: config.py
quiz-video-backend/app/pipeline/: chunking.py  embed_store.py  models.py  quiz_gen.py  transcribe.py  video_io.py
quiz-video-backend/app/storage/: file_store.py
quiz-video-ui/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
quiz-video-ui/src/app/: layout.tsx  page.tsx
quiz-video-ui/src/app/api/jobs/: route.ts
quiz-video-ui/src/app/api/jobs/jobId/: route.ts
quiz-video-ui/src/app/api/upload/: route.ts
quiz-video-ui/src/app/jobs/: page.tsx
quiz-video-ui/src/app/jobs/[jobId]/: page.tsx
quiz-video-ui/src/app/upload/: page.tsx
quiz-video-ui/src/components/: AppShell.tsx
quiz-video-ui/src/components/Jobs/: JobList.tsx  JobProgressBar.tsx  JobStatusBadge.tsx
quiz-video-ui/src/components/UI/: Button.tsx  Card.tsx  Input.tsx  Label.tsx  Spinner.tsx  Toast.tsx
quiz-video-ui/src/components/Upload/: FilePicker.tsx  UploadDropzone.tsx  UploadForm.tsx  YoutubeUrlInput.tsx
quiz-video-ui/src/lib/: apiClient.ts  format.ts  storage.ts  types.ts  validators.ts
quiz-video-ui/src/server/: mockDb.ts
